# GiflibWithGlide

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wellee/giflibwithglide/: MainActivity.kt
app/src/main/java/com/wellee/giflibwithglide/decoder/: GifDecoder.java  GifResource.java
app/src/main/java/com/wellee/giflibwithglide/extension/: GlideExtensions.java  GlideGifModule.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gifdecoder/: build.gradle
gifdecoder/src/main/: AndroidManifest.xml
gifdecoder/src/main/cpp/: CMakeLists.txt  FrameSequenceJNI.cpp
gifdecoder/src/main/java/com/wellee/gifdecoder/: FrameSequence.java  FrameSequenceDrawable.java
gradle/wrapper/: gradle-wrapper.properties
